<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="int_zero">0</string>
    
    <string name="int_one">1</string>
    
    
    
    
    
    <string name="app_name">Who Wants to be a Millionaire</string>
    
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="main">Main Menu</string>
    
    <string name="authors">Authors:</string>
    <string name="cheng">Cheng Cheng Guan</string>
    <string name="joan">Joan Daniel Peris Sánchez</string>
    <string name="subject">ADM 2013</string>
    
    <string name="name_">Name:</string>
    <string name="name">User Name</string>
    <string name="help_settings">Select how many times can you ask for help:</string>
    <string name="add_friend">Add friend</string>
    <string-array name="options_settings">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string name="local">Local</string>
    <string name="friends">Friends</string>
    <string name="delete">Delete</string>
    <string name="scores_warning">Confirm to delete</string>
    <string name="dialog_delete_scores">Delete confirmation</string>
    <string name="delete_scores_ok">OK</string>
    <string name="delete_scores_no">Cancel</string>
    <string name="back">Back</string>
    
    <string name="play_for">Play for:</string>
    <string name="play_scores">Scores:</string>
    <string name="question">Question:</string>
    <string name="phone">Phone</string>
    <string name="fifty">50%</string>
    <string name="audience">Audience</string>
    <string name="end_game">End game</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    
    
    
    

</resources>
