<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-4dp"
        android:background="@color/reverse_background"
        android:orientation="vertical"
        android:weightSum="100"
        >

        <TextView
            android:text="@string/credits"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            style="@style/MainText"
	        android:layout_gravity="center"
	        android:gravity="center_vertical"
            android:layout_weight="20" />

		 <TextView
		     style="@style/MainText"
		     android:layout_width="wrap_content"
		     android:layout_height="0dp"
		     android:layout_gravity="center"
		     android:layout_weight="20"
		     android:gravity="center_horizontal"
		     android:text="@string/app_name"
		     android:textSize="30sp" />

		 <TextView
		     android:text="@string/authors"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
		     style="@style/PlainText"
		     android:layout_gravity="center"
		     android:gravity="center_horizontal"
		     android:layout_weight="10"
		     android:textSize="25sp" />

		 <TextView
	        android:text="@string/cheng"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
	        style="@style/PlainText"
	     	android:textColor="@color/plain_text"
	        android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_weight="15"
	        />
		 <TextView
	        android:text="@string/joan"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
	        style="@style/PlainText"
	        android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_weight="15"
	        />
		 
	     <View
	         android:background="@color/reverse_lines"
	         android:layout_width="match_parent"
	         android:layout_height="1dp" />
	     
	     <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="0dp"
	         android:layout_weight="20"
	         android:background="@color/reverse_odd"
	         android:orientation="vertical" >

		     <TextView
		         style="@style/MainText"
		         android:layout_width="wrap_content"
		         android:layout_height="match_parent"
		         android:layout_gravity="center_horizontal"
		         android:gravity="center_vertical"
		         android:text="@string/subject"
		         android:textAlignment="center" />

	     </LinearLayout>
	     
    </LinearLayout>
    
	<Button
		android:id="@+id/credits_back_button"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@android:color/transparent"
		android:onClick="closeCreditsActivity" />
</RelativeLayout>
