<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
		android:layout_marginBottom="-4dp"
        android:orientation="vertical"
        android:background="@color/reverse_background"
        android:weightSum="1">

	    <TextView
	        android:id="@+id/main_label"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_gravity="center"
	        android:gravity="center_vertical"
	        android:layout_weight="0.2"
	        android:textColor="@color/main_text"
	        android:text="@string/main"
	        android:textStyle="bold"
	        android:textSize="50sp" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
    	    android:textSize="30sp"
    	    android:textColor="@color/plain_text"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@android:color/transparent"
            android:text="@string/play"
            android:onClick="launchPlayActivity"
            />

        <Button
            android:id="@+id/scores_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
    	    android:textSize="30sp"
    	    android:textColor="@color/plain_text"
            android:background="@color/button_background"
            android:text="@string/scores"
            android:onClick="launchScoresActivity"
            />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
    	    android:textSize="30sp"
    	    android:textColor="@color/plain_text"
            android:background="@color/button_background"
            android:text="@string/settings"
            android:onClick="launchSettingsActivity"/>
        
    	<View
    	    android:layout_width="match_parent"
    	    android:layout_height="1dp"
    	    android:background="@color/reverse_lines" />
    	
    	<Button
    	    android:id="@+id/credits_button"
    	    android:layout_width="match_parent"
    	    android:layout_height="0dp"
    	    android:layout_weight="0.2"
    	    android:textSize="30sp"
    	    android:textColor="@color/plain_text"
    	    android:background="@color/reverse_odd"
    	    android:text="@string/credits"
	    	android:onClick="launchCreditsActivity" />
    	
    </LinearLayout>
    

</RelativeLayout>