<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-4dp"
        android:background="@color/reverse_background"
        android:orientation="vertical"
        android:weightSum="1"
        >
        
        <TextView
	        android:text="@string/settings"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        style="@style/MainText"
	        android:gravity="center_vertical"
	        android:layout_gravity="center"
	        android:layout_weight="0.2"
	        />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.2"
       		android:weightSum="1"
	        >
		    <TextView
		        android:text="@string/name_"
		        style="@style/PlainText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:layout_gravity="center"
		        android:layout_weight="0.5"
		        />
		    
		    <EditText
		        android:hint="@string/name"
		        style="@style/PlainText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_weight="0.5"
		        android:gravity="center_vertical" />

	    </LinearLayout>
	    
	    <LinearLayout
	        	android:layout_width="match_parent"
	        	android:layout_height="0dp"
		        android:layout_weight="0.2"
		        android:weightSum="1"
	        >
		    <TextView
		        android:text="@string/help_settings"
		        style="@style/PlainText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        />

		    <Spinner
		        android:id="@+id/settings_spinner"
		        style="@style/PlainText"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.5"
		        android:entries="@array/options_settings" />

	    </LinearLayout>
</LinearLayout>

</RelativeLayout>