<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_centerHorizontal="true"
	    android:background="@color/reverse_background"
	    android:orientation="vertical"
	    android:weightSum="1" >

	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.1" >

	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="10dp"
	            android:text="@string/play_for"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/reverse_lines" />

	        <TextView
	            android:id="@+id/play_reward"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_toRightOf="@+id/textView1"
	            android:text="@string/int_zero"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/reverse_lines" />

	        <TextView
	            android:id="@+id/play_question_number"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentTop="true"
	            android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:text="@string/int_zero"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/reverse_lines" />

	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toLeftOf="@+id/play_question_number"
	            android:text="@string/question"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/reverse_lines" />
	    </RelativeLayout>

	    <TextView
	        android:id="@+id/question_text"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_gravity="center"
	        android:layout_marginLeft="25dp"
	        android:layout_marginRight="25dp"
	        android:layout_weight="0.2"
	        android:maxLines="6"
	        android:singleLine="false"
	        android:text="Which is the Sunshine State of the US?"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/reverse_lines" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.4"
	        android:orientation="vertical" >

	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/reverse_lines" />

	        <Button
	            android:id="@+id/play_button_answer1"
	            style="@style/PlayAnswerButton"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="0.1"
	            android:text="Button" 
	            android:onClick="play_answer1"/>

	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/reverse_lines" />

	        <Button
	            android:id="@+id/play_button_answer2"
	            style="@style/PlayAnswerButton"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="0.1"
	            android:text="Button" 
	            android:onClick="play_answer2"/>

	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/reverse_lines" />

	        <Button
	            android:id="@+id/play_button_answer3"
	            style="@style/PlayAnswerButton"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="0.1"
	            android:text="Button" 
	            android:onClick="play_answer3"/>

	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/reverse_lines" />

	        <Button
	            android:id="@+id/play_button_answer4"
	            style="@style/PlayAnswerButton"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="0.1"
	            android:text="Button" 
	            android:onClick="play_answer4"/>

	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/reverse_lines" />

	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.05"
	        android:orientation="vertical" >
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="0.25"
	        android:background="@color/reverse_odd"
	        android:orientation="vertical"
	        android:weightSum="1" >

	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/reverse_lines" />

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="0.5"
	            android:weightSum="0.9" >

	            <Button
	                android:id="@+id/play_button_phone"
	                style="@style/PlainButton"
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="0.3"
	                android:background="@android:color/transparent"
	                android:text="@string/phone" 
	                android:onClick="play_phone"/>

	            <View
	                android:layout_width="1dp"
	                android:layout_height="match_parent"
	                android:background="@color/reverse_lines" />

	            <Button
	                android:id="@+id/play_button_audience"
	                style="@style/PlainButton"
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="0.3"
	                android:background="@android:color/transparent"
	                android:text="@string/audience"  
	                android:onClick="play_audience"/>

	            <View
	                android:layout_width="1dp"
	                android:layout_height="match_parent"
	                android:background="@color/reverse_lines" />

	            <Button
	                android:id="@+id/play_button_fifty"
	                style="@style/PlainButton"
	                android:layout_width="0dp"
	                android:layout_height="match_parent"
	                android:layout_weight="0.3"
	                android:background="@android:color/transparent"
	                android:text="@string/fifty"  
	                android:onClick="play_fifty"/>
	        </LinearLayout>

	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/reverse_lines" />

	        <Button
	            android:id="@+id/play_button_end_game"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="0.5"
	            android:text="@string/end_game"
	            android:textColor="@color/reverse_red"  
	            android:background="@android:color/transparent"
	            android:onClick="play_end_game"/>
	    </LinearLayout>

	</LinearLayout>

</RelativeLayout>